@@ -24,7 +24,6 @@ import java.util.Map;
 
 import org.apache.hadoop.classification.InterfaceAudience;
 import org.apache.hadoop.classification.InterfaceStability;
-import org.apache.hadoop.conf.Configurable;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.conf.Configured;
 import org.apache.hadoop.util.ReflectionUtils;
@@ -35,7 +34,7 @@ import org.apache.hadoop.util.StringUtils;
 @InterfaceAudience.Private
 @InterfaceStability.Unstable
 
-public class CommandFactory extends Configured implements Configurable {
+public class CommandFactory extends Configured {
   private Map<String, Class<? extends Command>> classMap =
     new HashMap<String, Class<? extends Command>>();
 
